# binat_mit_shared

./: LICENSE  README.md  pyproject.toml  tag
binat_shared/: video_helper.py
